Use Charset object where possible
GitOrigin-RevId: f03c3ec99d05a22c1264506c1f67d37c5f804cbe